android/desktop: consolidate xml parsing, fix bdiv3x for android